src/objects/Song__c.object
<CustomObject>
    <description>Represents a cover song from our magnificent repertoire.</description>
    <fields>
        <fullName>Minutes__c</fullName>
        <label>Minutes</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Artist__c</fullName>
        <description>Name of artist that originally released this song.</description>
        <inlineHelpText>Name of artist that originally released this song.</inlineHelpText>
        <label>Original Artist</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seconds__c</fullName>
        <label>Seconds</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Song</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Original_Artist__c</columns>
        <columns>Status__c</columns>
        <columns>Rating__c</columns>
        <columns>Minutes__c</columns>
        <columns>Seconds__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Song Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Songs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>